# BIOINF-SEMINAR

./: CMakeLists.txt
alignment/: CMakeLists.txt
alignment/include/bsc/: alignment.hpp
alignment/src/: alignment.cpp
alignment/test/: CMakeLists.txt  alignment_test.cpp
alignment/test/data/: 1_primjer_globalno_poravnanje.fasta.txt  1_primjer_globalno_poravnanje2.fasta.txt  2_primjer_poluGlobalno_poravnanje.fasta.txt  3_primjer_lokalno_poravnanje.fasta.txt
alignment/test/results/: 1_primjer_globalno_poravnanje.fasta.paf  1_primjer_globalno_poravnanje2.fasta.paf  2_primjer_poluGlobalno_poravnanje.fasta.paf  3_primjer_lokalno_poravnanje.fasta.paf
bioparser/: CMakeLists.txt
bioparser/include/bioparser/: parser.hpp
minimizers/: CMakeLists.txt  todo.md
minimizers/include/bsc/: minimizers.hpp
minimizers/src/: minimizers.cpp
src/: main.cpp
